// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/widgets/users/Avatars should fetch missing users 1`] = `
<Memo(Avatars)
  size="xl"
  userIds={
    Array [
      "1",
      "6",
      "7",
      "2",
      "8",
      "9",
    ]
  }
>
  <div
    className="Avatars Avatars___xl"
  >
    <UserAvatar
      key="1"
      size="xl"
      style={
        Object {
          "background": "rgb(240, 240, 241)",
        }
      }
      userId="1"
    >
      <ProfilePopoverController
        src="/api/v4/users/1/image?_=1620680333191"
        triggerComponentClass="style--none btn-round"
        userId="1"
      >
        <span
          className="style--none btn-round"
          onClick={[Function]}
          role="button"
          style={
            Object {
              "display": "inline-block",
            }
          }
          tabIndex={0}
        >
          <WithTooltip
            title="first.last1"
          >
            <Avatar
              onBlur={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onMouseLeave={[Function]}
              onMouseMove={[Function]}
              onPointerDown={[Function]}
              onPointerEnter={[Function]}
              size="xl"
              style={
                Object {
                  "background": "rgb(240, 240, 241)",
                }
              }
              tabIndex={-1}
              url="/api/v4/users/1/image?_=1620680333191"
              username="first.last1"
            >
              <img
                alt="first.last1 profile image"
                className="Avatar Avatar-xl"
                loading="lazy"
                onBlur={[Function]}
                onError={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onMouseLeave={[Function]}
                onMouseMove={[Function]}
                onPointerDown={[Function]}
                onPointerEnter={[Function]}
                src="/api/v4/users/1/image?_=1620680333191"
                style={
                  Object {
                    "background": "rgb(240, 240, 241)",
                  }
                }
                tabIndex={-1}
              />
            </Avatar>
          </WithTooltip>
        </span>
        <div
          style={
            Object {
              "left": "-9999px",
              "pointerEvents": "none",
              "position": "absolute",
            }
          }
        >
          <wc-contact-sheet
            account-id={-1}
            background-color="transparent"
            is-external={false}
            k-chat-team-name="team1"
            k-chat-user-name="first.last1"
            presence="offline"
            prevent-open-on-hover={true}
            prevent-stop-propagation={true}
            size="md"
            src="/api/v4/users/1/image?_=1620680333191"
            user-name="First1 Last1"
          />
        </div>
      </ProfilePopoverController>
    </UserAvatar>
    <UserAvatar
      key="6"
      size="xl"
      style={
        Object {
          "background": "rgb(240, 240, 241)",
        }
      }
      userId="6"
    >
      <ProfilePopoverController
        src="/api/v4/users/6/image?_=0"
        triggerComponentClass="style--none btn-round"
        userId="6"
      >
        <span
          className="style--none btn-round"
          onClick={[Function]}
          role="button"
          style={
            Object {
              "display": "inline-block",
            }
          }
          tabIndex={0}
        >
          <WithTooltip
            title="Someone"
          >
            <Avatar
              onBlur={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onMouseLeave={[Function]}
              onMouseMove={[Function]}
              onPointerDown={[Function]}
              onPointerEnter={[Function]}
              size="xl"
              style={
                Object {
                  "background": "rgb(240, 240, 241)",
                }
              }
              tabIndex={-1}
              url="/api/v4/users/6/image?_=0"
              username=""
            >
              <img
                alt="user profile image"
                className="Avatar Avatar-xl"
                loading="lazy"
                onBlur={[Function]}
                onError={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onMouseLeave={[Function]}
                onMouseMove={[Function]}
                onPointerDown={[Function]}
                onPointerEnter={[Function]}
                src="/api/v4/users/6/image?_=0"
                style={
                  Object {
                    "background": "rgb(240, 240, 241)",
                  }
                }
                tabIndex={-1}
              />
            </Avatar>
          </WithTooltip>
        </span>
        <div
          style={
            Object {
              "left": "-9999px",
              "pointerEvents": "none",
              "position": "absolute",
            }
          }
        >
          <wc-contact-sheet
            account-id={-1}
            background-color="transparent"
            is-external={false}
            k-chat-team-name="team1"
            presence="offline"
            prevent-open-on-hover={true}
            prevent-stop-propagation={true}
            size="md"
            src="/api/v4/users/6/image?_=0"
            user-name="undefined undefined"
          />
        </div>
      </ProfilePopoverController>
    </UserAvatar>
    <UserAvatar
      key="7"
      size="xl"
      style={
        Object {
          "background": "rgb(240, 240, 241)",
        }
      }
      userId="7"
    >
      <ProfilePopoverController
        src="/api/v4/users/7/image?_=0"
        triggerComponentClass="style--none btn-round"
        userId="7"
      >
        <span
          className="style--none btn-round"
          onClick={[Function]}
          role="button"
          style={
            Object {
              "display": "inline-block",
            }
          }
          tabIndex={0}
        >
          <WithTooltip
            title="Someone"
          >
            <Avatar
              onBlur={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onMouseLeave={[Function]}
              onMouseMove={[Function]}
              onPointerDown={[Function]}
              onPointerEnter={[Function]}
              size="xl"
              style={
                Object {
                  "background": "rgb(240, 240, 241)",
                }
              }
              tabIndex={-1}
              url="/api/v4/users/7/image?_=0"
              username=""
            >
              <img
                alt="user profile image"
                className="Avatar Avatar-xl"
                loading="lazy"
                onBlur={[Function]}
                onError={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onMouseLeave={[Function]}
                onMouseMove={[Function]}
                onPointerDown={[Function]}
                onPointerEnter={[Function]}
                src="/api/v4/users/7/image?_=0"
                style={
                  Object {
                    "background": "rgb(240, 240, 241)",
                  }
                }
                tabIndex={-1}
              />
            </Avatar>
          </WithTooltip>
        </span>
        <div
          style={
            Object {
              "left": "-9999px",
              "pointerEvents": "none",
              "position": "absolute",
            }
          }
        >
          <wc-contact-sheet
            account-id={-1}
            background-color="transparent"
            is-external={false}
            k-chat-team-name="team1"
            presence="offline"
            prevent-open-on-hover={true}
            prevent-stop-propagation={true}
            size="md"
            src="/api/v4/users/7/image?_=0"
            user-name="undefined undefined"
          />
        </div>
      </ProfilePopoverController>
    </UserAvatar>
    <WithTooltip
      title="first.last2, Someone, Someone"
    >
      <Avatar
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseLeave={[Function]}
        onMouseMove={[Function]}
        onPointerDown={[Function]}
        onPointerEnter={[Function]}
        size="xl"
        style={
          Object {
            "background": "rgb(240, 240, 241)",
          }
        }
        tabIndex={0}
        text="+3"
        username=""
      >
        <div
          className="Avatar Avatar-xl Avatar-plain"
          data-content="+3"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseLeave={[Function]}
          onMouseMove={[Function]}
          onPointerDown={[Function]}
          onPointerEnter={[Function]}
          style={
            Object {
              "background": "rgb(240, 240, 241)",
            }
          }
          tabIndex={0}
        />
      </Avatar>
    </WithTooltip>
  </div>
</Memo(Avatars)>
`;

exports[`components/widgets/users/Avatars should properly count overflow 1`] = `
<Memo(Avatars)
  size="xl"
  userIds={
    Array [
      "1",
      "2",
      "3",
      "4",
      "5",
    ]
  }
>
  <div
    className="Avatars Avatars___xl"
  >
    <UserAvatar
      key="1"
      size="xl"
      style={
        Object {
          "background": "rgb(240, 240, 241)",
        }
      }
      userId="1"
    >
      <ProfilePopoverController
        src="/api/v4/users/1/image?_=1620680333191"
        triggerComponentClass="style--none btn-round"
        userId="1"
      >
        <span
          className="style--none btn-round"
          onClick={[Function]}
          role="button"
          style={
            Object {
              "display": "inline-block",
            }
          }
          tabIndex={0}
        >
          <WithTooltip
            title="first.last1"
          >
            <Avatar
              onBlur={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onMouseLeave={[Function]}
              onMouseMove={[Function]}
              onPointerDown={[Function]}
              onPointerEnter={[Function]}
              size="xl"
              style={
                Object {
                  "background": "rgb(240, 240, 241)",
                }
              }
              tabIndex={-1}
              url="/api/v4/users/1/image?_=1620680333191"
              username="first.last1"
            >
              <img
                alt="first.last1 profile image"
                className="Avatar Avatar-xl"
                loading="lazy"
                onBlur={[Function]}
                onError={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onMouseLeave={[Function]}
                onMouseMove={[Function]}
                onPointerDown={[Function]}
                onPointerEnter={[Function]}
                src="/api/v4/users/1/image?_=1620680333191"
                style={
                  Object {
                    "background": "rgb(240, 240, 241)",
                  }
                }
                tabIndex={-1}
              />
            </Avatar>
          </WithTooltip>
        </span>
        <div
          style={
            Object {
              "left": "-9999px",
              "pointerEvents": "none",
              "position": "absolute",
            }
          }
        >
          <wc-contact-sheet
            account-id={-1}
            background-color="transparent"
            is-external={false}
            k-chat-team-name="team1"
            k-chat-user-name="first.last1"
            presence="offline"
            prevent-open-on-hover={true}
            prevent-stop-propagation={true}
            size="md"
            src="/api/v4/users/1/image?_=1620680333191"
            user-name="First1 Last1"
          />
        </div>
      </ProfilePopoverController>
    </UserAvatar>
    <UserAvatar
      key="2"
      size="xl"
      style={
        Object {
          "background": "rgb(240, 240, 241)",
        }
      }
      userId="2"
    >
      <ProfilePopoverController
        src="/api/v4/users/2/image?_=1620680333191"
        triggerComponentClass="style--none btn-round"
        userId="2"
      >
        <span
          className="style--none btn-round"
          onClick={[Function]}
          role="button"
          style={
            Object {
              "display": "inline-block",
            }
          }
          tabIndex={0}
        >
          <WithTooltip
            title="first.last2"
          >
            <Avatar
              onBlur={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onMouseLeave={[Function]}
              onMouseMove={[Function]}
              onPointerDown={[Function]}
              onPointerEnter={[Function]}
              size="xl"
              style={
                Object {
                  "background": "rgb(240, 240, 241)",
                }
              }
              tabIndex={-1}
              url="/api/v4/users/2/image?_=1620680333191"
              username="first.last2"
            >
              <img
                alt="first.last2 profile image"
                className="Avatar Avatar-xl"
                loading="lazy"
                onBlur={[Function]}
                onError={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onMouseLeave={[Function]}
                onMouseMove={[Function]}
                onPointerDown={[Function]}
                onPointerEnter={[Function]}
                src="/api/v4/users/2/image?_=1620680333191"
                style={
                  Object {
                    "background": "rgb(240, 240, 241)",
                  }
                }
                tabIndex={-1}
              />
            </Avatar>
          </WithTooltip>
        </span>
        <div
          style={
            Object {
              "left": "-9999px",
              "pointerEvents": "none",
              "position": "absolute",
            }
          }
        >
          <wc-contact-sheet
            account-id={-1}
            background-color="transparent"
            is-external={false}
            k-chat-team-name="team1"
            k-chat-user-name="first.last2"
            presence="offline"
            prevent-open-on-hover={true}
            prevent-stop-propagation={true}
            size="md"
            src="/api/v4/users/2/image?_=1620680333191"
            user-name="First2 Last2"
          />
        </div>
      </ProfilePopoverController>
    </UserAvatar>
    <UserAvatar
      key="3"
      size="xl"
      style={
        Object {
          "background": "rgb(240, 240, 241)",
        }
      }
      userId="3"
    >
      <ProfilePopoverController
        src="/api/v4/users/3/image?_=1620680333191"
        triggerComponentClass="style--none btn-round"
        userId="3"
      >
        <span
          className="style--none btn-round"
          onClick={[Function]}
          role="button"
          style={
            Object {
              "display": "inline-block",
            }
          }
          tabIndex={0}
        >
          <WithTooltip
            title="first.last3"
          >
            <Avatar
              onBlur={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onMouseLeave={[Function]}
              onMouseMove={[Function]}
              onPointerDown={[Function]}
              onPointerEnter={[Function]}
              size="xl"
              style={
                Object {
                  "background": "rgb(240, 240, 241)",
                }
              }
              tabIndex={-1}
              url="/api/v4/users/3/image?_=1620680333191"
              username="first.last3"
            >
              <img
                alt="first.last3 profile image"
                className="Avatar Avatar-xl"
                loading="lazy"
                onBlur={[Function]}
                onError={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onMouseLeave={[Function]}
                onMouseMove={[Function]}
                onPointerDown={[Function]}
                onPointerEnter={[Function]}
                src="/api/v4/users/3/image?_=1620680333191"
                style={
                  Object {
                    "background": "rgb(240, 240, 241)",
                  }
                }
                tabIndex={-1}
              />
            </Avatar>
          </WithTooltip>
        </span>
        <div
          style={
            Object {
              "left": "-9999px",
              "pointerEvents": "none",
              "position": "absolute",
            }
          }
        >
          <wc-contact-sheet
            account-id={-1}
            background-color="transparent"
            is-external={false}
            k-chat-team-name="team1"
            k-chat-user-name="first.last3"
            presence="offline"
            prevent-open-on-hover={true}
            prevent-stop-propagation={true}
            size="md"
            src="/api/v4/users/3/image?_=1620680333191"
            user-name="First3 Last3"
          />
        </div>
      </ProfilePopoverController>
    </UserAvatar>
    <WithTooltip
      title="first.last4, first.last5"
    >
      <Avatar
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseLeave={[Function]}
        onMouseMove={[Function]}
        onPointerDown={[Function]}
        onPointerEnter={[Function]}
        size="xl"
        style={
          Object {
            "background": "rgb(240, 240, 241)",
          }
        }
        tabIndex={0}
        text="+2"
        username=""
      >
        <div
          className="Avatar Avatar-xl Avatar-plain"
          data-content="+2"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseLeave={[Function]}
          onMouseMove={[Function]}
          onPointerDown={[Function]}
          onPointerEnter={[Function]}
          style={
            Object {
              "background": "rgb(240, 240, 241)",
            }
          }
          tabIndex={0}
        />
      </Avatar>
    </WithTooltip>
  </div>
</Memo(Avatars)>
`;

exports[`components/widgets/users/Avatars should support userIds 1`] = `
<Memo(Avatars)
  size="xl"
  userIds={
    Array [
      "1",
      "2",
      "3",
    ]
  }
>
  <div
    className="Avatars Avatars___xl"
  >
    <UserAvatar
      key="1"
      size="xl"
      style={
        Object {
          "background": "rgb(240, 240, 241)",
        }
      }
      userId="1"
    >
      <ProfilePopoverController
        src="/api/v4/users/1/image?_=1620680333191"
        triggerComponentClass="style--none btn-round"
        userId="1"
      >
        <span
          className="style--none btn-round"
          onClick={[Function]}
          role="button"
          style={
            Object {
              "display": "inline-block",
            }
          }
          tabIndex={0}
        >
          <WithTooltip
            title="first.last1"
          >
            <Avatar
              onBlur={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onMouseLeave={[Function]}
              onMouseMove={[Function]}
              onPointerDown={[Function]}
              onPointerEnter={[Function]}
              size="xl"
              style={
                Object {
                  "background": "rgb(240, 240, 241)",
                }
              }
              tabIndex={-1}
              url="/api/v4/users/1/image?_=1620680333191"
              username="first.last1"
            >
              <img
                alt="first.last1 profile image"
                className="Avatar Avatar-xl"
                loading="lazy"
                onBlur={[Function]}
                onError={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onMouseLeave={[Function]}
                onMouseMove={[Function]}
                onPointerDown={[Function]}
                onPointerEnter={[Function]}
                src="/api/v4/users/1/image?_=1620680333191"
                style={
                  Object {
                    "background": "rgb(240, 240, 241)",
                  }
                }
                tabIndex={-1}
              />
            </Avatar>
          </WithTooltip>
        </span>
        <div
          style={
            Object {
              "left": "-9999px",
              "pointerEvents": "none",
              "position": "absolute",
            }
          }
        >
          <wc-contact-sheet
            account-id={-1}
            background-color="transparent"
            is-external={false}
            k-chat-team-name="team1"
            k-chat-user-name="first.last1"
            presence="offline"
            prevent-open-on-hover={true}
            prevent-stop-propagation={true}
            size="md"
            src="/api/v4/users/1/image?_=1620680333191"
            user-name="First1 Last1"
          />
        </div>
      </ProfilePopoverController>
    </UserAvatar>
    <UserAvatar
      key="2"
      size="xl"
      style={
        Object {
          "background": "rgb(240, 240, 241)",
        }
      }
      userId="2"
    >
      <ProfilePopoverController
        src="/api/v4/users/2/image?_=1620680333191"
        triggerComponentClass="style--none btn-round"
        userId="2"
      >
        <span
          className="style--none btn-round"
          onClick={[Function]}
          role="button"
          style={
            Object {
              "display": "inline-block",
            }
          }
          tabIndex={0}
        >
          <WithTooltip
            title="first.last2"
          >
            <Avatar
              onBlur={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onMouseLeave={[Function]}
              onMouseMove={[Function]}
              onPointerDown={[Function]}
              onPointerEnter={[Function]}
              size="xl"
              style={
                Object {
                  "background": "rgb(240, 240, 241)",
                }
              }
              tabIndex={-1}
              url="/api/v4/users/2/image?_=1620680333191"
              username="first.last2"
            >
              <img
                alt="first.last2 profile image"
                className="Avatar Avatar-xl"
                loading="lazy"
                onBlur={[Function]}
                onError={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onMouseLeave={[Function]}
                onMouseMove={[Function]}
                onPointerDown={[Function]}
                onPointerEnter={[Function]}
                src="/api/v4/users/2/image?_=1620680333191"
                style={
                  Object {
                    "background": "rgb(240, 240, 241)",
                  }
                }
                tabIndex={-1}
              />
            </Avatar>
          </WithTooltip>
        </span>
        <div
          style={
            Object {
              "left": "-9999px",
              "pointerEvents": "none",
              "position": "absolute",
            }
          }
        >
          <wc-contact-sheet
            account-id={-1}
            background-color="transparent"
            is-external={false}
            k-chat-team-name="team1"
            k-chat-user-name="first.last2"
            presence="offline"
            prevent-open-on-hover={true}
            prevent-stop-propagation={true}
            size="md"
            src="/api/v4/users/2/image?_=1620680333191"
            user-name="First2 Last2"
          />
        </div>
      </ProfilePopoverController>
    </UserAvatar>
    <UserAvatar
      key="3"
      size="xl"
      style={
        Object {
          "background": "rgb(240, 240, 241)",
        }
      }
      userId="3"
    >
      <ProfilePopoverController
        src="/api/v4/users/3/image?_=1620680333191"
        triggerComponentClass="style--none btn-round"
        userId="3"
      >
        <span
          className="style--none btn-round"
          onClick={[Function]}
          role="button"
          style={
            Object {
              "display": "inline-block",
            }
          }
          tabIndex={0}
        >
          <WithTooltip
            title="first.last3"
          >
            <Avatar
              onBlur={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onMouseLeave={[Function]}
              onMouseMove={[Function]}
              onPointerDown={[Function]}
              onPointerEnter={[Function]}
              size="xl"
              style={
                Object {
                  "background": "rgb(240, 240, 241)",
                }
              }
              tabIndex={-1}
              url="/api/v4/users/3/image?_=1620680333191"
              username="first.last3"
            >
              <img
                alt="first.last3 profile image"
                className="Avatar Avatar-xl"
                loading="lazy"
                onBlur={[Function]}
                onError={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onMouseLeave={[Function]}
                onMouseMove={[Function]}
                onPointerDown={[Function]}
                onPointerEnter={[Function]}
                src="/api/v4/users/3/image?_=1620680333191"
                style={
                  Object {
                    "background": "rgb(240, 240, 241)",
                  }
                }
                tabIndex={-1}
              />
            </Avatar>
          </WithTooltip>
        </span>
        <div
          style={
            Object {
              "left": "-9999px",
              "pointerEvents": "none",
              "position": "absolute",
            }
          }
        >
          <wc-contact-sheet
            account-id={-1}
            background-color="transparent"
            is-external={false}
            k-chat-team-name="team1"
            k-chat-user-name="first.last3"
            presence="offline"
            prevent-open-on-hover={true}
            prevent-stop-propagation={true}
            size="md"
            src="/api/v4/users/3/image?_=1620680333191"
            user-name="First3 Last3"
          />
        </div>
      </ProfilePopoverController>
    </UserAvatar>
  </div>
</Memo(Avatars)>
`;
